--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -91,7 +91,7 @@ jobs:
       - name: Run Java Tests
         if: ${{ env.language == 'Java' }}
         run: |
-          if [ -f Tests/Test.java ]; then
+          if [ -f Tests/test.java ]; then
             javac -d . Solutions/*.java Tests/*.java && java Tests.Test
           else
             echo "Java test file not found at Tests/Test.java, skipping Java test."
