--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,7 +11,7 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v4
         with:
-          fetch-depth: 2  # Ensure previous commit is available
+          fetch-depth: 2
 
       - name: Install Dependencies
         run: |
@@ -23,7 +23,6 @@ jobs:
         run: |
           BEFORE_COMMIT="${{ github.event.before }}"
 
-          # Handle empty, zero SHA or invalid commit
           if [ -z "$BEFORE_COMMIT" ] || [ "$BEFORE_COMMIT" = "0000000000000000000000000000000000000000" ] || ! git cat-file -e "$BEFORE_COMMIT"^{commit}; then
             echo "Invalid or empty BEFORE_COMMIT, using first commit as fallback"
             BEFORE_COMMIT=$(git rev-list --max-parents=0 HEAD)
@@ -69,7 +68,7 @@ jobs:
         if: ${{ env.language == 'C++' }}
         run: |
           if [ -f Tests/test.cpp ]; then
-            g++ -I. tests/test.cpp Solutions/*.cpp -o solution_cpp
+            g++ Tests/test.cpp -o solution_cpp
             ./solution_cpp
           else
             echo "No C++ test file found at Tests/test.cpp, skipping C++ test."
@@ -86,7 +85,7 @@ jobs:
           fi
           
           echo "Executing Python script: $PYTHON_FILE"
-          PYTHONPATH=Solutions python Tests/Test.py
+          PYTHONPATH=Solutions python3 Tests/Test.py
 
       - name: Run Java Tests
         if: ${{ env.language == 'Java' }}
@@ -94,5 +93,5 @@ jobs:
           if [ -f Tests/test.java ]; then
             javac -d . Solutions/*.java Tests/*.java && java Tests.Test
           else
-            echo "Java test file not found at Tests/Test.java, skipping Java test."
+            echo "Java test file not found at Tests/test.java, skipping Java test."
           fi
