--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,8 +1,12 @@
 name: Run Code Tests
 
 on:
-  push: {}
-  pull_request: {}
+  push:
+    paths:
+      - "solutions/**"
+  pull_request:
+    paths:
+      - "tests/**"
 
 jobs:
   run-tests:
@@ -11,7 +15,7 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v4
         with:
-          fetch-depth: 2
+          fetch-depth: 2  # Ensure previous commit is available
 
       - name: Install Dependencies
         run: |
@@ -22,12 +26,10 @@ jobs:
         id: changed-files
         run: |
           BEFORE_COMMIT="${{ github.event.before }}"
-
-          if [ -z "$BEFORE_COMMIT" ] || [ "$BEFORE_COMMIT" = "0000000000000000000000000000000000000000" ] || ! git cat-file -e "$BEFORE_COMMIT"^{commit}; then
-            echo "Invalid or empty BEFORE_COMMIT, using first commit as fallback"
-            BEFORE_COMMIT=$(git rev-list --max-parents=0 HEAD)
+          if [ -z "$BEFORE_COMMIT" ] || ! git cat-file -e "$BEFORE_COMMIT"^{commit}; then
+            BEFORE_COMMIT=$(git rev-parse HEAD~1)  # Use last commit as fallback
           fi
-
+          
           CHANGED_FILES=$(git diff --name-only "$BEFORE_COMMIT" HEAD)
           echo "Detected changed files: $CHANGED_FILES"
 
@@ -57,41 +59,33 @@ jobs:
       - name: Compile and Run C Program
         if: ${{ env.language == 'C' }}
         run: |
-          if [ -f Tests/test.c ]; then
-            gcc Tests/test.c Solutions/*.c -o solution_c
-            ./solution_c
-          else
-            echo "No C test file found at Tests/test.c, skipping C test."
-          fi
+          gcc tests/test.c -o solution_c
+          ./solution_c
 
       - name: Compile and Run C++ Program
         if: ${{ env.language == 'C++' }}
         run: |
-          if [ -f Tests/test.cpp ]; then
-            g++ Tests/test.cpp -o solution_cpp
-            ./solution_cpp
-          else
-            echo "No C++ test file found at Tests/test.cpp, skipping C++ test."
-          fi
+          g++ -I. tests/test.cpp solutions/*.cpp -o solution_cpp
+          ./solution_cpp
 
       - name: Run Python Program
         if: ${{ env.language == 'Python' }}
         run: |
-          PYTHON_FILE=$(ls Solutions/*.py 2>/dev/null | head -n 1)
+          PYTHON_FILE=$(ls solutions/*.py 2>/dev/null | head -n 1)
 
           if [ -z "$PYTHON_FILE" ]; then
-            echo "Error: No Python script found in Solutions/ directory!"
+            echo "Error: No Python script found in solutions/ directory!"
             exit 1
           fi
           
           echo "Executing Python script: $PYTHON_FILE"
-          PYTHONPATH=Solutions python3 Tests/Test.py
-
+          # python3 "$PYTHON_FILE" < tests/test.py
+          python -m tests.test
       - name: Run Java Tests
         if: ${{ env.language == 'Java' }}
         run: |
-          if [ -f Tests/test.java ]; then
-            javac -d . Solutions/*.java Tests/*.java && java Tests.Test
+          if ls tests/Test.java 1> /dev/null 2>&1; then
+            javac -d . solutions/*.java tests/*.java && java tests.Test
           else
-            echo "Java test file not found at Tests/test.java, skipping Java test."
+            echo "Java test file not found."
           fi
