--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,12 +1,8 @@
 name: Run Code Tests
 
 on:
-  push:
-    paths:
-      - "solutions/**"
-  pull_request:
-    paths:
-      - "tests/**"
+  push: {}
+  pull_request: {}
 
 jobs:
   run-tests:
@@ -15,7 +11,7 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v4
         with:
-          fetch-depth: 2  # Ensure previous commit is available
+          fetch-depth: 2
 
       - name: Install Dependencies
         run: |
@@ -26,10 +22,12 @@ jobs:
         id: changed-files
         run: |
           BEFORE_COMMIT="${{ github.event.before }}"
-          if [ -z "$BEFORE_COMMIT" ] || ! git cat-file -e "$BEFORE_COMMIT"^{commit}; then
-            BEFORE_COMMIT=$(git rev-parse HEAD~1)  # Use last commit as fallback
+
+          if [ -z "$BEFORE_COMMIT" ] || [ "$BEFORE_COMMIT" = "0000000000000000000000000000000000000000" ] || ! git cat-file -e "$BEFORE_COMMIT"^{commit}; then
+            echo "Invalid or empty BEFORE_COMMIT, using first commit as fallback"
+            BEFORE_COMMIT=$(git rev-list --max-parents=0 HEAD)
           fi
-          
+
           CHANGED_FILES=$(git diff --name-only "$BEFORE_COMMIT" HEAD)
           echo "Detected changed files: $CHANGED_FILES"
 
@@ -59,33 +57,41 @@ jobs:
       - name: Compile and Run C Program
         if: ${{ env.language == 'C' }}
         run: |
-          gcc tests/test.c -o solution_c
-          ./solution_c
+          if [ -f Tests/test.c ]; then
+            gcc Tests/test.c Solutions/*.c -o solution_c
+            ./solution_c
+          else
+            echo "No C test file found at Tests/test.c, skipping C test."
+          fi
 
       - name: Compile and Run C++ Program
         if: ${{ env.language == 'C++' }}
         run: |
-          g++ -I. tests/test.cpp solutions/*.cpp -o solution_cpp
-          ./solution_cpp
+          if [ -f Tests/test.cpp ]; then
+            g++ Tests/test.cpp -o solution_cpp
+            ./solution_cpp
+          else
+            echo "No C++ test file found at Tests/test.cpp, skipping C++ test."
+          fi
 
       - name: Run Python Program
         if: ${{ env.language == 'Python' }}
         run: |
-          PYTHON_FILE=$(ls solutions/*.py 2>/dev/null | head -n 1)
+          PYTHON_FILE=$(ls Solutions/*.py 2>/dev/null | head -n 1)
 
           if [ -z "$PYTHON_FILE" ]; then
-            echo "Error: No Python script found in solutions/ directory!"
+            echo "Error: No Python script found in Solutions/ directory!"
             exit 1
           fi
           
           echo "Executing Python script: $PYTHON_FILE"
-          # python3 "$PYTHON_FILE" < tests/test.py
-          python -m tests.test
+          PYTHONPATH=Solutions python3 Tests/test.py
+
       - name: Run Java Tests
         if: ${{ env.language == 'Java' }}
         run: |
-          if ls tests/Test.java 1> /dev/null 2>&1; then
-            javac -d . solutions/*.java tests/*.java && java tests.Test
+          if [ -f Tests/test.java ]; then
+            javac -d . Solutions/*.java Tests/*.java && java Tests.Test
           else
-            echo "Java test file not found."
+            echo "Java test file not found at Tests/test.java, skipping Java test."
           fi
